// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table product {
  product_name varchar [unique, primary key]
  coffea varchar
  varietal varchar
  origin varchar
  roasting varchar
  decaf bool
}

Table reference {
  product bigint [ref: - product.product_name] // one-to-one for each product has one reference
  barcode varchar [unique]
  format varchar
  packaging varchar
  retail_price bigint
  cur_stock bigint [default: 0]
  min_stock bigint [default: 5]
  max_stock bigint [default: 15]

  indexes {
    (barcode, retail_price, packaging) [pk]
  }
}

Table supplier {
  name varchar [unique, primary key]
  PROV_TAXID varchar [unique]
  PROV_BANKACC varchar [unique]
  PROV_ADDRESS varchar [unique]
  PROV_COUNTRY varchar
  PROV_PERSON varchar [unique]
  Cost_Price bigint
  PROV_EMAIl varchar [unique]
  Prov_MOBILE varchar [unique]
}

Table ReplacementOrder {
  ORDERDATE varchar
  ORDERTIME varchar
  STATUS varchar
  SUPPLIER bigint [ref: > supplier.name] // many replacement orders can be from the same supplier
  REFERENCE bigint [ref: > reference.barcode] // many replacement orders can be for the same reference
  Quantity bigint
  TOTAL_PAYMENT decimal
  DeliveryInfo bigint [ref: - DeliveryInfo.DLIV_DATE] // one replacemnt order arrives at one point in time
}

Table CustomerOrder {
  id bigint [primary key]
  Client bigint [ref: > Client.CLIENT_EMAIL] // many customer orders can be from the same client
  ORDERDATE varchar
  ORDERTIME varchar
  Address bigint [ref: > Address.BLOCK] // many customer orders can go to the same address
}

Table Address {
  id bigint [pk]
  WAYTYPE varchar 
  WAYNAME varchar
  GATE varchar
  BLOCK varchar
  STAIRW varchar
  FLOOR varchar
  DOOR varchar
  ZIP varchar
  TOWN varchar
  COUNTRY varchar
}

Table DeliveryInfo {
  DLIV_DATE varchar
  DLIV_TIME varchar

  indexes {
    (DLIV_DATE, DLIV_TIME) [pk]
  }
}

Table Delivery {
  id bigint [primary key]
  ITEM bigint [ref: - Item.id] // one item is part of one delivery
  Address bigint [ref : > Address.id] // many deliveries can go to the same address
  DeliveryInfo bigint [ref: > DeliveryInfo.DLIV_DATE] // many deliveries can arrive at the same time
}

Table Billing {
  id bigint [primary key]
  PAYMENT_TYPE varchar
  PAYMENT_DATE varchar
  PAYMENT_TIME varchar
  CustomerOrder bigint [ref: - CustomerOrder.id] // each bill has one order
  CreditCard bigint [ref: > CreditCard.CARD_NUMBER] // many bills can have the same credit card
  BillingAdress bigint [ref: > Address.id] // many bills can have the same billing address
}

Table CreditCard {
  CARD_NUMBER bigint [unique, pk]
  CARD_COMPANY varchar
  CARD_HOLDER varchar
  CARD_EXPIRATN varchar
}

Table Item {
  id bigint [primary key]
  CustomerOrder bigint [ref: > CustomerOrder.id] // many Items can have the same customer order
  Reference bigint [ref: - reference.barcode] // each Item has one Reference 
  Quantity bigint
  BASE_PRICE bigint
  Total_Price bigint
}

Table Client {
  CLIENT_EMAIL varchar
  CLIENT_MOBILE varchar

  indexes {
    (CLIENT_EMAIL, CLIENT_MOBILE) [pk]
  }
}

Table RegisteredClient {
  username varchar [pk, unique]
  reg_date date
  reg_time time
  user_passw varchar
  client_name varchar
  client_surn1 varchar
  client_surn2 varchar
  Client bigint [ref: - Client.CLIENT_EMAIL] // all registered clients are clients 
  contact_preference varchar [default: "sms"]
  voucher_id int [ref: > Voucher.id]
}

Table RegisteredClientAddress {
  id bigint [primary key]
  RegisteredClient bigint [ref: > RegisteredClient.username] 
  Address bigint [ref: - Address.BLOCK]
} 

Table Voucher {
  id int [pk]
  discount decimal
  date date
}

Table Comment {
  id int [pk]
  RegisteredClient bigint [ref: - RegisteredClient.username] // one comment belongs to one user 
  Product varchar [ref: > product.product_name]
  post_date date
  post_time time
  title varchar
  text text
  score int
  likes int [default: 0]
  endorsed boolean
  
}
